--- a/resources/build.properties
+++ b/resources/build.properties
@@ -91,7 +91,7 @@ project.name=SketchOutline
 # javadoc-reference and all web-files - the compile process here
 # takes longer)
 
-project.compile=fast
+project.compile=normal
 
 # all files compiled with project.compile=normal are stored 
 # in folder distribution
@@ -105,7 +105,7 @@ project.compile=fast
 
 # set the current version of your project. 
 
-project.version=0.1.6
+project.version=0.1.7
 project.copyright=(c) 2012
 project.dependencies=
 project.keywords=Tool, Processing
@@ -119,8 +119,8 @@ tested.processingversion=2.0b6
 # recommendations for storing your source code online are: code.google or github.
 
 source.host=code.google
-source.url=http://code.google.com/p/sketch-outline/
-source.repository=http://code.google.com/p/sketch-outline/source/browse/
+source.url=https://github.com/Manindra29/Sketch-Outline
+source.repository=https://github.com/Manindra29/Sketch-Outline
 
 
 # include javadoc references into your project's javadoc
