--- a/resources/build.xml
+++ b/resources/build.xml
@@ -112,10 +112,10 @@ ${line}
 		</antcall>
 		<antcall target="generate.distribution" />
 		<antcall target="generate.install.tool" />
-		<!-- <antcall target="generate.web" />
+		<antcall target="generate.web" />
 		<antcall target="generate.zip" />		
 		<delete dir="${project.tmp}" />
-		-->		
+			
 	</target>
 
 
