Added a more stable 0.1.7. The tree is slightly better behaved now.

--- a/resources/build.properties
+++ b/resources/build.properties
@@ -91,7 +91,7 @@ project.name=SketchOutline
 # javadoc-reference and all web-files - the compile process here
 # takes longer)
 
-project.compile=normal
+project.compile=fast
 
 # all files compiled with project.compile=normal are stored 
 # in folder distribution
@@ -105,7 +105,7 @@ project.compile=normal
 
 # set the current version of your project. 
 
-project.version=0.1.7
+project.version=0.2.0
 project.copyright=(c) 2012
 project.dependencies=
 project.keywords=Tool, Processing
@@ -114,7 +114,7 @@ author.name=Manindra Moharana
 author.url=http://www.mkmoharana.com/
 
 tested.platform=windows,os x,linux
-tested.processingversion=2.0b6
+tested.processingversion=2.0b7
 
 # recommendations for storing your source code online are: code.google or github.
 
