Fixed icon path issue on OS X.

--- a/data/tool.properties
+++ b/data/tool.properties
@@ -5,10 +5,10 @@
 name = Sketch Outline
 
 # List of authors. Links can be provided using the syntax [author name](url).
-authorList = [Manindra Moharana](http://quarkninja.blogspot.in/)
+authorList = [Manindra Moharana](http://www.mkmoharana.com/)
 
 # A web page for your tool, NOT a direct link to where to download it.
-url = http://code.google.com/p/sketch-outline/
+url = https://github.com/Manindra29/Sketch-Outline
 
 # The category of your tool, must be one (or many) of the following:
 #   "3D"            "Animation"     "Compilations"      "Data"          
@@ -41,8 +41,8 @@ paragraph = The list of member variables, functions and inner classes are shown 
 # compare different versions of the same tool, and check if an update is 
 # available. You should think of it as a counter, counting the total number of 
 # releases you've had.
-version = 1  
+version = 2  
 
 # The version as the user will see it. If blank, the version attribute will be 
 # used here.
-prettyVersion = 0.1.5
+prettyVersion = 0.1.7
