--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,15 @@
 	<classpathentry kind="lib" path="lib/javaparser-1.0.8.jar" sourcepath="E:/Program Files/javaparser-1.0.8/src"/>
 	<classpathentry kind="lib" path="C:/Users/QuarkNinja.XQ/processing-read-only/build/windows/work/core/library/core.jar"/>
 	<classpathentry kind="lib" path="C:/Users/QuarkNinja.XQ/processing-read-only/build/windows/work/lib/pde.jar"/>
-	<classpathentry kind="lib" path="lib/org-netbeans-swing-outline.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.core.contenttype_3.4.100.v20110423-0524.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.core.jobs_3.5.100.v20110404.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.core.resources_3.7.100.v20110510-0712.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.core.runtime_3.7.0.v20110110.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.equinox.common_3.6.0.v20110523.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.equinox.preferences_3.4.1.R37x_v20110725.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.jdt.core_3.7.1.v_B76_R37x.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.osgi_3.7.1.R37x_v20110808-1106.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.text_3.5.101.r371_v20110810-0800.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
